--- a/index.html
+++ b/index.html
@@ -25,25 +25,27 @@
     <!-- Header  -->
     <header class="container-fluid" id="header">
         <div class="row">
-            <div class="col-1 logo">
-                <!-- <a href="" class="logo-click"></a> -->
-                <img src="./assets/images/logo2.jpg" class="" alt="">
-            </div>
-            <div class="col nav">
-                <a class="active" href="./index.html">Home</a>
-                <a href="./district.html">District</a>
-                <a href="./login.html">Login</a>
-                <a href="./signup.html">Signup</a>
-            </div>
-            <div class="col-3 user">
-                <div class="search-box">
-                    <div>
-                        <img src="./assets/images/search.png" alt="">
+            <nav class="navbar navbar-expand-lg navbar-light ">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#"><img src="./assets/images/logo2.jpg" class="" alt="" width="50"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+                            <a class="nav-link" href="./district.html">District</a>
+                            <a class="nav-link" href="./login.html">Login</a>
+                            <a class="nav-link" href="./signup.html">Signup</a>
+                        </div>
+                        <form class="d-flex">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success bg-success text-light" type="submit">Search</button>
+                        </form>
                     </div>
-                    <div><input class="search-key" type="text"></div>
-
                 </div>
-            </div>
+            </nav>
+
         </div>
 
     </header>
@@ -139,41 +141,40 @@
                     <li>
                         <a href="https://www.keralatourism.org/where-to-stay/">
                             <i class="hotel">
-                                <img loading="lazy" src="./assets/images/section2/plans/hotel.png"
-                                    alt="Where to Stay">
+                                <img loading="lazy" src="./assets/images/section2/plans/hotel.png" alt="Where to Stay">
                             </i>
                             <span class="caption">Where to Stay</span>
                         </a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/ebrochures/"><i class="brochure"><img loading="lazy"
-                                    src="./assets/images/section2/plans/brochure.png"
-                                    alt="E Brochures"></i><span class="caption">E Brochures</span></a>
+                                    src="./assets/images/section2/plans/brochure.png" alt="E Brochures"></i><span
+                                class="caption">E Brochures</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/visa-requirement/"><i class="visa"><img loading="lazy"
-                                    src="./assets/images/section2/plans/visa.png"
-                                    alt="Visa on Arrival"></i><span class="caption">Visa on Arrival</span></a>
+                                    src="./assets/images/section2/plans/visa.png" alt="Visa on Arrival"></i><span
+                                class="caption">Visa on Arrival</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/traveller/"><i class="info"><img loading="lazy"
-                                    src="./assets/images/section2/plans/info.png"
-                                    alt="Travel Info"></i><span class="caption">Travel Info</span></a>
+                                    src="./assets/images/section2/plans/info.png" alt="Travel Info"></i><span
+                                class="caption">Travel Info</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/travelcare"><i class="messageboard"><img loading="lazy"
-                                    src="./assets/images/section2/plans/messageboard.png"
-                                    alt="Travel Care"></i><span class="caption">Travel Care</span></a>
+                                    src="./assets/images/section2/plans/messageboard.png" alt="Travel Care"></i><span
+                                class="caption">Travel Care</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/toiletsurvey"><i class="toilets"><img loading="lazy"
-                                    src="./assets/images/section2/plans/toilets.png"
-                                    alt="Toilets"></i><span class="caption">Toilets</span></a>
+                                    src="./assets/images/section2/plans/toilets.png" alt="Toilets"></i><span
+                                class="caption">Toilets</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/newsletter"><i class="messageboard"><img loading="lazy"
-                                    src="./assets/images/section2/plans/newsletter.png"
-                                    alt="Newsletter"></i><span class="caption">E Newsletter</span></a>
+                                    src="./assets/images/section2/plans/newsletter.png" alt="Newsletter"></i><span
+                                class="caption">E Newsletter</span></a>
                     </li>
                     <li>
                         <a href="https://www.keralatourism.org/yatrinivas"><i style="padding:22px;"><img loading="lazy"
@@ -192,9 +193,10 @@
         <div class="row">
             <div class="col-12">
                 <div id="credit " class="fnt-color-light">
-                    <h3 class="text-center"><small>Toll free No: </small> 1-800-425-4747 <small>(Within India only)</small></h3>
-                    Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033<br>Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail: <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>. <br>All
-                    rights reserved © Kerala Tourism 2022. <a href="" title="Copyright">Copyright</a> | <a href="" title="Terms of Use">Terms of Use</a> | <a href="" title="Cookie Policy">Cookie Policy</a> | <a href="" title="Contact Us">Contact Us</a>.
+                    <h3 class="text-center"><small>Toll free No: </small> 1-800-425-4747 <small>(Within India
+                            only)</small></h3>
+                    Department of Tourism, Government of Kerala, Park View, Thiruvananthapuram, Kerala, India - 695 033
+                    <br>Phone: +91 471 2321132, Fax: +91 471 2322279, E-mail: <a href="mailto:info@keralatourism.org">info@keralatourism.org</a>. <br>All rights reserved © Kerala Tourism 2022. <a href="" title="Copyright">Copyright</a> | <a href="" title="Terms of Use">Terms of Use</a>                    | <a href="" title="Cookie Policy">Cookie Policy</a> | <a href="" title="Contact Us">Contact Us</a>.
                     <br>Developed &amp; Maintained by Invis Multimedia.
                 </div>
             </div>
