--- a/login.html
+++ b/login.html
@@ -19,49 +19,19 @@
 
 <body>
     <!-- intro -->
-    <section class="container-fluid intro1">
-        <div class="row">
-            <div id="carouselExampleControls" class="col carousel slide carousel-fade h-100" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/images/login/img3.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/login/img2.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/login/img7.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/login/img5.jpg" class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/login/img6.jpg" class="d-block w-100" alt="...">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <section class="container-fluid h-100 w-100">
+        <div class="row loginForm align-self-center">
+            <div class="col-6 d-none d-lg-inline-flex align-self-center justify-content-center">
+                <p class="note text-light text-justify text-center ">Explore Kerala in rich experience</p>
             </div>
-        </div>
-    </section>
-
-
-    <section class="container-fluid loginForm">
-        <div class="row  align-items-center">
-            <div class="col-4 mx-auto px-4 py-3">
-                <form action="">
+            <div class="col-4 d-lg-inline-flex   align-self-center justify-content-center">
+                <form class="px-5 py-4 w-auto bg-light shadow-lg mb-5 bg-white rounded" action="./index.html">
                     <fieldset class="form-group">
-                        <legend class="text-center">Login</legend>
+                        <legend class="text-center text-danger">Welcome ..</legend>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="username">User Name</label>
-                            <input class="form-control" type="text" id="userName" placeholder="enter user name">
+                            <label class="form-control-label mb-2" for="username">User Name</label>
+                            <input class="form-control" type="email" id="userName" placeholder="enter user name" required>
                         </div>
 
                         <!-- <div class="form-group mb-4">
@@ -70,8 +40,8 @@
                         </div> -->
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="password">Enter Password</label>
-                            <input class="form-control" type="password" id="password" placeholder="enter password">
+                            <label class="form-control-label mb-2" for="password">Enter Password</label>
+                            <input class="form-control" type="password" id="password" placeholder="enter password" required>
 
                         </div>
 
@@ -80,7 +50,7 @@
                             <input class="form-control" type="password" id="repassword" placeholder="enter same password">
                         </div> -->
 
-                        <a href="./index.html" class="btn btn-primary">Login</a>
+                        <input class="btn btn-primary mx-2 p1" type="submit" value="Login"><a class="text-danger" href="./signup.html">Not Regeistered!</a>
 
 
                     </fieldset>
@@ -89,25 +59,11 @@
         </div>
     </section>
 
+
+
     <!-- Optional JavaScript -->
 
-    <script>
-        // When the user scrolls down 50px from the top of the document, resize the header's font size
-        window.onscroll = function() {
-            scrollFunction()
-        }
 
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 50 ||
-                document.documentElement.scrollTop > 50
-            ) {
-                document.getElementById('header').classList.add('head-scroll')
-            } else {
-                document.getElementById('header').classList.remove('head-scroll')
-            }
-        }
-    </script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
