--- a/signup.html
+++ b/signup.html
@@ -18,49 +18,59 @@
 </head>
 
 <body>
-    <section class="container-fluid signup">
-        <div class="row align-items-center">
-            <div class="col-7 mx-auto">
-                <form action="">
+    <section class="container-fluid signup w-100 h-100">
+        <div class="row justify-content-center">
+            <div class="col-6 p-4 align-items-center">
+                <form class="bg-light text-dark p-5 " action="./index.html" onsubmit="return validate()">
                     <fieldset class="form-group">
-                        <h2>Sign Up</h2>
+                        <h2 class="text-danger">Sign Up</h2>
                         <legend>Fill the Form</legend>
 
 
-                        <div class="form-group mb-4">
-                            <div class="form-group mb-3">
-                                <label class="form-control-label" for="firstname">First Name</label>
+                        <div class="form-group mb-4 form-inline">
+                            <div class="form-group form-inline mb-2">
+                                <label class="form-control-label mb-2" for="firstname">First Name</label>
                                 <input class="form-control" type="text" id="firstname" placeholder="enter First name">
                             </div>
 
-                            <div class="form-group mb-3">
-                                <label class="form-control-label" for="secondname">Email</label>
-                                <input class="form-control" type="text" id="secondname" placeholder="enter second id">
+                            <div class="form-group form-inline mb-2">
+                                <label class="form-control-label mb-2" for="secondname">Second Name</label>
+                                <input class="form-control" type="text" id="secondname" placeholder="enter second name">
                             </div>
+
+                            <small class="form-text text-muted" id="nameHint"></small>
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="username">User Name</label>
-                            <input class="form-control" type="text" id="userName" placeholder="enter user name">
+                            <label class="form-control-label mb-2" for="phonenumber">Phone Number</label>
+                            <input class="form-control" type="tel" id="phonenumber" placeholder="enter user name" pattern="^(^[0-9]{3}[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4}[-\s\.]?)">
+                            <small class="form-text text-muted" id="phonHint">Enter Password with consisting charectors
+                                and symbols</small>
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="email">Email</label>
+                            <label class="form-control-label mb-2" for="email">Email</label>
                             <input class="form-control" type="email" id="email" placeholder="enter email id">
+                            <small class="form-text text-muted" id="emailHint">Enter Password with consisting charectors
+                                and symbols</small>
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="password">Enter Password</label>
+                            <label class="form-control-label mb-2" for="password">Enter Password</label>
                             <input class="form-control" type="password" id="password" placeholder="enter password">
-                            <small class="form-text text-muted" id="paswdHint">Enter Password with consisting charectors and symbols</small>
+                            <small class="form-text text-muted" id="paswdHint">Enter Password with consisting charectors
+                                and symbols</small>
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label" for="username">*Re-enter password</label>
+                            <label class="form-control-label mb-2" for="username">*Re-enter password</label>
                             <input class="form-control" type="password" id="repassword" placeholder="enter same password">
+                            <small class="form-text text-muted" id="paswdHint2">Enter Password with consisting
+                                charectors
+                                and symbols</small>
                         </div>
 
-                        <a href="./index.html" class="btn btn-primary">SignUp</a>
+                        <input class="btn btn-primary" type="submit" value="SignUp">
 
 
                     </fieldset>
@@ -70,24 +80,43 @@
     </section>
 
     <!-- Optional JavaScript -->
-
     <script>
-        // When the user scrolls down 50px from the top of the document, resize the header's font size
-        window.onscroll = function() {
-            scrollFunction()
-        }
+        function validate() {
+            console.log("started");
+            var firstname = document.getElementById('firstname');
+            var secondname = document.getElementById('secondname');
+            var phonenumber = document.getElementById('phonenumber');
+            var email = document.getElementById('email');
+            var password = document.getElementById('password');
+            var repassword = document.getElementById('repassword');
 
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 50 ||
-                document.documentElement.scrollTop > 50
-            ) {
-                document.getElementById('header').classList.add('head-scroll')
-            } else {
-                document.getElementById('header').classList.remove('head-scroll')
-            }
+            if (firstname.value != "" || secondname.value != "") {
+                var regex = /^([A-Za-z])*/;
+                if (regex.test(firstname.value)) return true;
+                else {
+                    var nameHint = document.getElementById('nameHint');
+                    nameHint.innerText = "Entered name is not permittable";
+                    nameHint.style.color = 'red';
+                    firstname.style.border = '1px solid red';
+
+                    return false;
+                }
+                if (regex.test(secondname.value)) return true;
+                else {
+                    var nameHint = document.getElementById('nameHint');
+                    nameHint.innerText = "Entered name is not permittable";
+                    nameHint.style.color = 'red';
+                    secondname.style.border = '1px solid red';
+
+                    return false;
+                }
+            } else return false;
+
+
         }
     </script>
+
+
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
