--- a/district.html
+++ b/district.html
@@ -50,12 +50,12 @@
     <section class="container-fluid dist-intro mb-5">
         <article class="row">
             <div class="col dist-img">
-                <img src="./assets/images/Ditricts/WA.jpg" alt="" />
+                <img src="./assets/images/intro-carousel/intro3.jpg" alt="" />
             </div>
         </article>
     </section>
 
-    <section class="container">
+    <section class="container bg-light">
         <div>
             <h2 class="text-center">Districts</h2>
 
