--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <div class="carousel-item active">
                         <img src="./assets/images/intro-carousel/intro4.jpg" class="d-block w-100" alt="...">
                     </div>
-                    <div class="carousel-item">
+                    <!-- <div class="carousel-item">
                         <img src="./assets/images/intro-carousel/intro3.jpg" class="d-block w-100" alt="...">
-                    </div>
+                    </div> -->
                     <div class="carousel-item">
                         <img src="./assets/images/intro-carousel/intro1.jpg" class="d-block w-100" alt="...">
                     </div>
