--- a/login.html
+++ b/login.html
@@ -30,8 +30,8 @@
                         <legend class="text-center text-danger">Welcome ..</legend>
 
                         <div class="form-group mb-4">
-                            <label class="form-control-label mb-2" for="username">User Name</label>
-                            <input class="form-control" type="email" id="userName" placeholder="enter user name" required>
+                            <label class="form-control-label mb-2" for="username">Email</label>
+                            <input class="form-control" type="email" id="userName" placeholder="enter email" required>
                         </div>
 
                         <!-- <div class="form-group mb-4">
