--- a/district.html
+++ b/district.html
@@ -55,7 +55,7 @@
         </article>
     </section>
 
-    <section class="container bg-light">
+    <section class="container light">
         <div>
             <h2 class="text-center">Districts</h2>
 
@@ -65,7 +65,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./alp.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/AL/sreee.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/AL/sreee.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Alappuzha</h2>
                 </div>
@@ -73,7 +73,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./erklm.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/ekl/bolgaty.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/ekl/bolgaty.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Ernakulam</h2>
                 </div>
@@ -81,7 +81,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./idk.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/IDK/anchuruli.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/IDK/anchuruli.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Idukki</h2>
 
@@ -90,7 +90,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./KNR.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KNR/beach.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KNR/beach.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Kannur</h2>
 
@@ -100,7 +100,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./KSR.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KSR/Ranipuram.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KSR/Ranipuram.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Kasaragod</h2>
 
@@ -109,7 +109,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./KLM.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KLM/jatayu.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KLM/jatayu.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Kollam</h2>
 
@@ -118,7 +118,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./KT.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KT/VAGAMON.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KT/VAGAMON.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Kottyam</h2>
 
@@ -127,7 +127,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./KZK.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/KZK/Thusharagiri Waterfall.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Kozhikode</h2>
 
@@ -136,7 +136,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./MA.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/MA/Kottakkunnu.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/MA/Kottakkunnu.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Malappuram</h2>
 
@@ -145,7 +145,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./PLK.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PLK/Silent Valley National Park.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PLK/Silent Valley National Park.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Palakkad</h2>
 
@@ -154,7 +154,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./PT.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PT/Aranmula.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/PT/Aranmula.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Pathanamthitta</h2>
 
@@ -163,7 +163,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./TV.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TV/Poovar Island.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TV/Poovar Island.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Thiruvananthapuram</h2>
 
@@ -172,7 +172,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./TS.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TS/athirapally-falls-in.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/TS/athirapally-falls-in.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Thrissur</h2>
 
@@ -181,7 +181,7 @@
             <div class="col card mb-3 border-0">
                 <div class=" card-body">
                     <a href="./WA.html">
-                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/WA/Edakkal Caves.jpg" alt="" style="height: 150px;">
+                        <img class="card-img img-fluid border-0 rounded-circle" src="./assets/images/Ditricts/WA/Edakkal Caves.jpg" alt="" style="width: 200px; height: 150px;">
                     </a>
                     <h2 class="card-title text-center">Wayanad</h2>
 
