--- a/signup.html
+++ b/signup.html
@@ -55,14 +55,14 @@
 
                         <div class="form-group mb-4">
                             <label class="form-control-label mb-2" for="password">Enter Password</label>
-                            <input class="form-control" type="password" id="password" placeholder="enter password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
+                            <input class="form-control" type="password" id="password" placeholder="enter password" required>
                             <small class="form-text text-muted" id="paswdHint">Enter Password with consisting charectors
                                 and symbols</small>
                         </div>
 
                         <div class="form-group mb-4">
                             <label class="form-control-label mb-2" for="username">*Re-enter password</label>
-                            <input class="form-control" type="password" id="repassword" placeholder="enter same password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$" required>
+                            <input class="form-control" type="password" id="repassword" placeholder="enter same password" required>
                             <small class="form-text text-muted" id="paswdHint2">Enter Password with consisting
                                 charectors
                                 and symbols</small>
